Fixed content not showing up after page reload.

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -47,7 +47,6 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  line-height: 300px;
   font-size: 50px;
   text-align: center;
 }
